--- a/form/index.html
+++ b/form/index.html
@@ -4,10 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Formulario Completo</title>
+		<script src="./assets/app.js" defer></script>
 		<link rel="stylesheet" href="./assets/index.css" />
 	</head>
 	<body>
 		<form>
+			<!-- Datos personales -->
 			<fieldset id="personal-data">
 				<legend>Datos personales</legend>
 				<label for="name">Nombre:</label>
