Add checked attribute to input

--- a/form/index.html
+++ b/form/index.html
@@ -75,6 +75,7 @@
 						id="certificado"
 						name="nivel"
 						value="certificado"
+						checked
 					/>
 					<label for="certificado">Certificado escolar</label>
 					<br />
